--- a/HapParser/Samples/Page 3.html
+++ b/HapParser/Samples/Page 3.html
@@ -3,16 +3,16 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>PAGE 1</title>
+    <title>PAGE 3</title>
 </head>
 <body>
     <a href="Page2.html">click for page2 peer</a><hr />
     <a href="C:\dev\HttpSpike\HapParser\Samples\Page2.html">click for page2 absolute</a><hr />
-    <a href="C:/dev/HttpSpike/HapParser/Samples/Page2.html">click for page2 absolute FWDSLASH</a><hr />
     <a href=".\Page2.html">click for page2 dot</a><hr />
     <a href="..\samples\Page2.html">click for page2 dotdot</a><hr />
     <a href="file://C:\dev\HttpSpike\HapParser\Samples\Page2.html">click for page2 file</a><hr />
-    <a href="\Page2.html">click for page2 top ** FAILS**</a><hr />
+    <a href="\Page2.html">click for page2 top ** FAILS **</a><hr />
     <a href="Page 3.html">click for pageSPACE3</a><hr />
+    <a href="Page%203.html">click for pagePERCENT3</a><hr />
 </body>
 </html>
